mobile nav menu no longer shifts content.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,13 @@
   --nav-height: 64px;
 }
 
+/* disabling scroll on html in favor of 
+having it on the body, so scrolling can be blocked
+by the mobile nav menu. */
+html {
+  overflow: hidden;
+}
+
 html, body {
   width: 100%;
   height: 100%;
@@ -46,6 +53,7 @@ body {
   margin: 0;
   font-family: var(--font-family);
   overflow-x: hidden;
+  overflow-y: auto;
   box-sizing: border-box;
   display: none;
 }
